--- a/src/stylesheets/styles.scss
+++ b/src/stylesheets/styles.scss
@@ -1,2 +1,10 @@
 // Load CSS Reset from NPM
-@import "~normalize.css"
+@import '~normalize.css';
+@import './css_002.css';
+@import './css.css';
+@import 'bootstrap.css';
+@import 'magnific-popup.css';
+@import 'nice-select.css';
+@import 'animate.css';
+// @import 'owl.css';
+@import 'main.css';
